[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphs_thepenguinhead"
version = "0.1.0"
description = "A Python package that implements Dijkstra's shortest path algorithm"
authors = [
    { name = "Jason Jarek", email = "jjarek@msudenver.edu" }
]
dependencies = []
